[package]
name = "underpass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.17.0", features = ["full"] }
serde = "1.0.188"
reqwest = { version = "0.11.20", features = ["json"] }
serde_json = "1.0.107"
geojson = "0.24.1"
thiserror = "1.0.49"
regex = "1.9.6"
dotenv = "0.15.0"
rand = "0.8.5"
async-trait = "0.1.74"
geo = "0.26.0"
async-recursion = "1.0.5"
petgraph = "0.6.4"
scraper = "0.18.1"

[dev-dependencies]
mockall = "0.11.2"
