[package]
name = "underpass"
version = "0.1.0"
edition = "2021"

build = "build.rs"

default-run = "underpass"

[[bin]]
name = "underpass"

[[bin]]
name = "update-taginfo"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.17.0", features = ["full"] }
serde = "1.0.188"
reqwest = { version = "0.11.20", features = ["json"] }
serde_json = "1.0.107"
geojson = "0.24.1"
thiserror = "1.0.49"
regex = "1.9.6"
dotenv = "0.15.0"
rand = "0.8.5"
async-trait = "0.1.74"
geo = "0.26.0"
async-recursion = "1.0.5"
petgraph = "0.6.4"
scraper = "0.18.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-appender = "0.2.2"
backtrace = "0.3.69"
const_format = "0.2.32"
gdal = { version = "0.16", features = ["bindgen", "array"] }
rtree_rs = "0.1.4"
moka = { version = "0.12.7", features = ["future"] }
ahash = "0.8.11"

[dev-dependencies]
mockall = "0.11.2"
